# PokerEquity

./: .gitignore  Hand.hs  Main.hs  MonteCarlo.hs  Poker.cabal  Poker.hs  README.md  Test.hs  hands.txt  pokerequity.cabal  stack.yaml
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
