name: Poker
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

executable poker
  main-is: Main.hs
  build-depends:
    base >= 4.14 && < 5,
    parallel == 3.2.2.0,
    random == 1.2.1
  hs-source-dirs:
    .
  ghc-options:
   -threaded
   -eventlog
   -rtsopts
   -- -prof
  default-language: Haskell2010
