name: Poker
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

executable poker
  main-is: Main.hs
  build-depends:
    base >= 4.14 && < 5,
    parallel == 3.2.2.0,
    random == 1.2.1,
    hs-carbon == 0.1.1.0,
    deepseq >= 1.4.6.1,
    async == 2.2.4,
    time == 1.12.2,
    text == 1.2.5.0,
    binary == 0.8.9.1
  hs-source-dirs:
    .
  ghc-options:
   -threaded
   -eventlog
   -rtsopts
   -prof
   -fprof-auto
  default-language: Haskell2010
